# PwZN_projekty

./: pyproject.toml
p01/: p01.py
p02/: p02.py
p03/: p03.py
p04/: p04.py  p04_no_numba.py
p05/: chuck01.py  chuck02.py  chuck03.py  chuck04.py  chuck05.py
p07/: p07.py
p08/: p08.ipynb
p09/: p09.py
